--- a/src/app/navbar/navbar-home/navbar-home.component.html
+++ b/src/app/navbar/navbar-home/navbar-home.component.html
@@ -1,13 +1,11 @@
-<mat-toolbar
-  class="navbar"
-  (scroll)="onscroll()"
-  [ngClass]="navbarfixed ? 'fixed' : 'nofixed'"
->
-  <span class="text">info@adust.edu.bd</span>
-  <span class="button">
-    <a mat-raised-button>Sign in/Register</a>
-  </span>
-</mat-toolbar>
+<div (scroll)="onscroll()">
+  <mat-toolbar class="navbar" [ngClass]="navbarfixed ? 'fixed' : 'nofixed'">
+    <span class="text">info@adust.edu.bd</span>
+    <span class="button">
+      <a mat-raised-button>Sign in/Register</a>
+    </span>
+  </mat-toolbar>
+</div>
 
 <!-- navbar End-->
 <!-- logo section -->
