--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -20,7 +20,7 @@
           </div>
 
           <h3 class="count-down">
-            <span class="counter">97</span> <span>%</span>
+            <span class="counter">{{ counterUp }}</span> <span>%</span>
           </h3>
           <p class="counter-text">Graduates</p>
         </div>
@@ -33,7 +33,7 @@
             <span><i class="fas fa-briefcase fa-3x"></i></span>
           </div>
           <h3 class="count-down">
-            <span class="counter">30</span> <span>+</span>
+            <span class="counter">{{ counter }}</span> <span>+</span>
           </h3>
 
           <p class="counter-text">Certified Teachers</p>
