--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -47,7 +47,9 @@
             <span><i class="fas fa-building fa-3x"></i></span>
           </div>
 
-          <h3 class="count-down"><span class="counter">2</span></h3>
+          <h3 class="count-down">
+            <span class="counter">{{ counterStep }}</span>
+          </h3>
           <p class="counter-text">Student Campuses</p>
         </div>
       </div>
@@ -60,7 +62,7 @@
           </div>
 
           <h3 class="count-down">
-            <span class="counter">3200</span> <span>+</span>
+            <span class="counter">{{ studentCount }}</span> <span>+</span>
           </h3>
           <p class="counter-text">Students</p>
         </div>
