--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar-home></app-navbar-home>
+<router-outlet></router-outlet>
 <app-header></app-header>
 <app-about></app-about>
 <app-about-more></app-about-more>
