--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<router-outlet></router-outlet>
-<app-header></app-header>
+<app-navbar-home></app-navbar-home>
+<app-header-home></app-header-home>
 <app-about></app-about>
 <app-about-more></app-about-more>
 <app-poster></app-poster>
