fixed about module.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar-home></app-navbar-home>
 <app-header-home></app-header-home>
-<app-about></app-about>
+<app-about-home></app-about-home>
 <app-about-more></app-about-more>
 <app-poster></app-poster>
 <app-counter></app-counter>
