event & Testimonials modules fixed.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <app-about-more></app-about-more>
 <app-poster></app-poster>
 <app-counter></app-counter>
-<app-tesimonials></app-tesimonials>
-<app-event></app-event>
+<app-testimonials></app-testimonials>
+
 <app-team-member></app-team-member>
 <app-footer></app-footer>
