title component make reusable.

--- a/src/app/events/event/event.component.html
+++ b/src/app/events/event/event.component.html
@@ -1,11 +1,6 @@
 <div class="container-fluid">
-  <div class="row my-5 text-center">
-    <div class="section-title mx-auto text-capitalize">
-      <h1><strong>Event</strong></h1>
-      <div class="title-underline mt-3 mx-auto"></div>
-    </div>
-  </div>
-
+  <div class="row my-5 text-center"></div>
+  <app-title>Event</app-title>
   <div class="event-container">
     <div class="row">
       <div class="col-md-6 mx-auto" *ngFor="let item of items">
