--- a/src/app/testimonial/testimonials/testimonials.component.html
+++ b/src/app/testimonial/testimonials/testimonials.component.html
@@ -1,9 +1,6 @@
 <div class="container">
   <div class="row my-5 text-center">
-    <div class="section-title mx-auto text-capitalize">
-      <h1><strong>testimonial</strong></h1>
-      <div class="title-underline mt-3 mx-auto"></div>
-    </div>
+    <app-title>testimonial</app-title>
   </div>
   <div class="testimonials">
     <ngb-carousel [showNavigationIndicators]="showNavigationIndicators">
