--- a/src/app/counters/counter/counter.component.html
+++ b/src/app/counters/counter/counter.component.html
@@ -1,10 +1,7 @@
 <!-- section title -->
 <div class="container">
   <div class="row my-5 text-center">
-    <div class="section-title mx-auto text-capitalize">
-      <h1><strong>statistics</strong></h1>
-      <div class="title-underline mt-3 mx-auto"></div>
-    </div>
+    <app-title>Statistics</app-title>
   </div>
 </div>
 
