--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
 <app-poster></app-poster>
 <app-counter></app-counter>
 <app-testimonials></app-testimonials>
+<app-event></app-event>
 <app-footer></app-footer>
