--- a/src/app/shared/title/title.component.html
+++ b/src/app/shared/title/title.component.html
@@ -1,4 +1,6 @@
-<div class="section-title mx-auto text-capitalize">
-  <h1><ng-content></ng-content></h1>
-  <div class="title-underline mt-3 mx-auto"></div>
+<div class="row my-5 text-center">
+  <div class="section-title mx-auto text-capitalize">
+    <h1><ng-content></ng-content></h1>
+    <div class="title-underline mt-3 mx-auto"></div>
+  </div>
 </div>
