--- a/src/app/about/about-more/about-more.component.html
+++ b/src/app/about/about-more/about-more.component.html
@@ -22,11 +22,7 @@
             necessitatibus dicta obcaecati dolore repudiandae ad sapiente harum!
             Aliquam perferendis, eum molestiae maiores ab modi expedita in.
           </p>
-          <a
-            href="#"
-            class="btn btn-lg btn-blue text-capitalize font-weight-bold py-2"
-            >learn more</a
-          >
+          <a href="#" mat-stroked-button class="btn--hidden">learn more</a>
         </div>
       </div>
     </div>
