--- a/src/app/events/event/event.component.css
+++ b/src/app/events/event/event.component.css
@@ -60,7 +60,7 @@
 }
 
 .event .event-right .event-timing {
-  background: #fff8ba;
+  background: rgb(231, 226, 226);
   display: flex;
   align-items: center;
   justify-content: center;
