--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -8,8 +8,11 @@
         will have deeper knowledge of the subjects that will be especially
         useful for you when climbing the career ladder.
       </p>
-      <a href="#" class="btn--white">Sign up for a free tour</a>
-      <a href="#" class="btn--hidden">learn more</a>
+      <!-- <a href="#" class="btn--white">Sign up for a free tour</a> -->
+
+      <a href="#" mat-stroked-button>Sign up for a free tour</a>
+
+      <a href="#" mat-stroked-button class="btn--hidden">learn more</a>
     </div>
   </div>
 </header>
