--- a/src/app/about/about-more/about-more.component.css
+++ b/src/app/about/about-more/about-more.component.css
@@ -1,3 +1,20 @@
+a {
+  text-decoration: none;
+}
+.mat-stroked-button {
+  text-transform: uppercase;
+  color: #000;
+  padding: 0.5rem 1rem;
+  border: 2px solid #091e58;
+  border-radius: 0.5rem;
+  display: inline-block;
+  transition: all 0.3s linear;
+  cursor: pointer;
+}
+.mat-stroked-button:hover {
+  color: #fff;
+  background: #091e58;
+}
 @media screen and (max-width: 576px) {
   #about {
     text-align: center;
