fixed footers modules.

--- a/src/app/footers/footer/footer.component.css
+++ b/src/app/footers/footer/footer.component.css
@@ -1,4 +1,7 @@
 /* footer section */
+a {
+  text-decoration: none;
+}
 .footer-wrapper {
   background: #080936;
 }
@@ -15,20 +18,30 @@
   color: #fff;
   font-weight: bold;
 }
-.menu ul li a:hover {
-  color: #999;
-}
+
 .menu ul {
   list-style-type: none;
 }
 .menu ul li a {
-  text-decoration: none !important;
   color: #ddd;
   font-size: 1rem;
 }
+.menu ul li a:hover {
+  color: #999;
+}
 .footer-bottom {
   background: #090a3d;
+  text-align: center;
 }
 .footer-bottom p {
   margin-bottom: 0;
+  color: #999;
+  font-size: 1rem;
+}
+.footer-bottom a {
+  color: #999;
+  font-size: 0.8rem;
+}
+.footer-bottom a:hover {
+  color: #ddd;
 }
