--- a/src/app/footers/footer/footer.component.html
+++ b/src/app/footers/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer-wrapper">
   <div>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6">
           <div class="text-widget">
@@ -125,6 +125,8 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>Copyright All Right Reserved 2021,<a href="#">Developed by</a></p>
+    <p>
+      Copyright All Right Reserved 2021,<a routerLink="./teams">Developed by</a>
+    </p>
   </div>
 </footer>
