routing implement in footers modules.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,6 @@
 <app-counter></app-counter>
 <app-testimonials></app-testimonials>
 <app-event></app-event>
-<app-footer></app-footer>
+<app-footer> </app-footer>
+
+<router-outlet></router-outlet>
