--- a/src/app/footers/footer/footer.component.html
+++ b/src/app/footers/footer/footer.component.html
@@ -126,7 +126,9 @@
   </div>
   <div class="footer-bottom">
     <p>
-      Copyright All Right Reserved 2021,<a routerLink="./teams">Developed by</a>
+      Copyright All Right Reserved 2021,<a routerLink="./TeamsComponent"
+        >Developed by</a
+      >
     </p>
   </div>
 </footer>
