--- a/src/app/footers/footer/footer.component.html
+++ b/src/app/footers/footer/footer.component.html
@@ -126,7 +126,7 @@
   </div>
   <div class="footer-bottom">
     <p>
-      Copyright All Right Reserved 2021,<a routerLink="./TeamsComponent"
+      Copyright All Right Reserved 2021,<a routerLink="./developby"
         >Developed by</a
       >
     </p>
