--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<app-header-home></app-header-home>
+<app-about-home></app-about-home>
+<app-about-more></app-about-more>
+<app-poster></app-poster>
+<app-counter></app-counter>
+<app-testimonials></app-testimonials>
+<app-event></app-event>
