tittle component make reuseable.

--- a/src/app/footers/footer/footer.component.html
+++ b/src/app/footers/footer/footer.component.html
@@ -117,6 +117,9 @@
                     >Bangladesh Technical Education Board</a
                   >
                 </li>
+                <li>
+                  <a routerLink="./developby">Developed by</a>
+                </li>
               </ul>
             </div>
           </div>
