--- a/src/app/team/teams/teams.component.html
+++ b/src/app/team/teams/teams.component.html
@@ -1,11 +1,6 @@
 <!-- section title -->
 <div class="container">
-  <div class="row my-5 text-center">
-    <div class="section-title mx-auto text-capitalize">
-      <h1><strong>Team Member</strong></h1>
-      <div class="title-underline mt-3 mx-auto"></div>
-    </div>
-  </div>
+  <app-title>Team Members</app-title>
   <!-- end of section title -->
   <ngb-carousel>
     <ng-template ngbSlide *ngFor="let item of items">
