make https request and response in events.

--- a/src/app/team/teams/teams.component.html
+++ b/src/app/team/teams/teams.component.html
@@ -1,6 +1,6 @@
 <!-- section title -->
 <div class="container">
-  <app-title>Team Members</app-title>
+  <app-title>Teams</app-title>
   <!-- end of section title -->
   <ngb-carousel>
     <ng-template ngbSlide *ngFor="let item of items">
