--- a/src/app/events/event/event.component.html
+++ b/src/app/events/event/event.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
+<div class="container">
   <app-title>Event</app-title>
   <div class="event-container">
     <div class="row">
-      <div class="col-md-6 mx-auto" *ngFor="let item of items">
+      <div class="col-md-6 mx-auto" *ngFor="let event of events">
         <div class="event">
           <div class="event-left">
             <div class="event-date">
@@ -12,12 +12,12 @@
           </div>
 
           <div class="event-right">
-            <h3 class="event-title">{{ item.title }}</h3>
+            <h3 class="event-title">{{ event.title }}</h3>
 
-            <div class="event-description">{{ item.description }}</div>
+            <div class="event-description">{{ event.description }}</div>
 
             <div class="event-timing">
-              <p>{{ item.time }}</p>
+              <p>{{ event.startDate }}</p>
             </div>
           </div>
         </div>
