--- a/src/app/events/event/event.component.css
+++ b/src/app/events/event/event.component.css
@@ -52,12 +52,17 @@
 }
 
 .event .event-right h3.event-title {
-  font-size: 24px;
+  font-size: 1.2rem;
   margin: 24px 0 10px 0;
   color: #218bbb;
   text-transform: uppercase;
 }
-
+.event .event-right .event-description {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 320px;
+}
 .event .event-right .event-timing {
   background: rgb(231, 226, 226);
   display: flex;
