Api implement in counter.

--- a/src/app/counters/counter/counter.component.html
+++ b/src/app/counters/counter/counter.component.html
@@ -8,61 +8,19 @@
   <div class="container">
     <div class="row text-center">
       <!-- single column -->
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6" *ngFor="let counter of counters | async">
         <div class="counter-item">
           <div class="mb-3 counter-icon">
             <span><i class="fas fa-graduation-cap fa-3x"></i></span>
           </div>
 
           <h3 class="count-down">
-            <span class="counter">{{ counterUp }}</span> <span>%</span>
+            <span class="counter">{{ counter.total }}</span> <span>+</span>
           </h3>
-          <p class="counter-text">Graduates</p>
+          <p class="counter-text">{{ counter.title }}</p>
         </div>
       </div>
       <!-- end of single column -->
-      <!-- single counter -->
-      <div class="col-md-3 col-sm-6">
-        <div class="counter-item">
-          <div class="mb-3 counter-icon">
-            <span><i class="fas fa-briefcase fa-3x"></i></span>
-          </div>
-          <h3 class="count-down">
-            <span class="counter">{{ counter }}</span> <span>+</span>
-          </h3>
-
-          <p class="counter-text">Certified Teachers</p>
-        </div>
-      </div>
-      <!-- end of single counter -->
-      <!-- single column -->
-      <div class="col-md-3 col-sm-6">
-        <div class="counter-item">
-          <div class="mb-3 counter-icon">
-            <span><i class="fas fa-building fa-3x"></i></span>
-          </div>
-
-          <h3 class="count-down">
-            <span class="counter">{{ counterStep }}</span>
-          </h3>
-          <p class="counter-text">Student Campuses</p>
-        </div>
-      </div>
-      <!-- end of single counter -->
-      <!-- single column -->
-      <div class="col-md-3 col-sm-6">
-        <div class="counter-item">
-          <div class="mb-3 counter-icon">
-            <span><i class="fas fa-user fa-3x"></i></span>
-          </div>
-
-          <h3 class="count-down">
-            <span class="counter">{{ studentCount }}</span> <span>+</span>
-          </h3>
-          <p class="counter-text">Students</p>
-        </div>
-      </div>
-      <!-- end of single column-->
     </div>
   </div>
 </section>
