--- a/src/app/events/event/event.component.html
+++ b/src/app/events/event/event.component.html
@@ -2,7 +2,7 @@
   <app-title>Event</app-title>
   <div class="event-container">
     <div class="row">
-      <div class="col-md-6 mx-auto" *ngFor="let event of events">
+      <div class="col-md-6 mx-auto" *ngFor="let event of events | async">
         <div class="event">
           <div class="event-left">
             <div class="event-date">
