implement dialogue box.

--- a/src/app/about/about-home/about-home.component.html
+++ b/src/app/about/about-home/about-home.component.html
@@ -28,7 +28,7 @@
         <!-- picture for about -->
         <div class="col-md-6 col-lg-4 about-img pt-5">
           <img
-            src="https://adust.edu.bd/wp-content/uploads/2020/12/Nasir-Uddin_CSE.png"
+            src="assets/Nasir-Uddin_CSE.webp"
             class="image-fluid"
             alt="about"
           />
