--- a/src/app/events/event/event.component.html
+++ b/src/app/events/event/event.component.html
@@ -15,10 +15,31 @@
             <h3 class="event-title">{{ event.title }}</h3>
 
             <div class="event-description">{{ event.description }}</div>
-
-            <div class="event-timing">
-              <p>{{ event.startDate | date: "shortTime" }}</p>
+            <div class="event-group">
+              <div class="event-timing">
+                <p>{{ event.startDate | date: "shortTime" }}</p>
+              </div>
+              <mat-icon (click)="isShown = true">visibility</mat-icon>
             </div>
+
+            <app-dialog-box (dismiss)="isShown = false" *ngIf="isShown">
+              <div content>
+                <div class="event-right">
+                  <h3 class="event-title">{{ event.title }}</h3>
+
+                  <div class="event-description">{{ event.description }}</div>
+
+                  <div class="event-group">
+                    <div class="event-timing">
+                      <p>{{ event.startDate | date: "shortTime" }}</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </app-dialog-box>
+            <!-- <div class="event-timing">
+              <p>{{ event.startDate | date: "shortTime" }}</p>
+            </div> -->
           </div>
         </div>
       </div>
