--- a/src/app/events/event/event.component.css
+++ b/src/app/events/event/event.component.css
@@ -49,6 +49,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 0 0.7rem;
+  width: 400px;
 }
 
 .event .event-right h3.event-title {
@@ -82,6 +83,12 @@
 .event .event-right .event-group {
   display: flex;
   justify-content: space-between;
+  position: relative;
+}
+.event .event-right .event-group .mat-icon {
+  position: absolute;
+  bottom: 40%;
+  right: 0;
 }
 .event .event-right .event-group .mat-icon {
   /* margin: 0 auto; */
