add some description.

--- a/src/app/team/teams/teams.component.html
+++ b/src/app/team/teams/teams.component.html
@@ -17,6 +17,7 @@
                 <div class="content">
                   <h4>{{ card.title }}</h4>
                   <p class="text-muted">{{ card.description }}</p>
+                  <p class="text-muted">{{ card.description2 }}</p>
                 </div>
               </div>
             </div>
