query component updated.

--- a/src/app/about/about-home/about-home.component.html
+++ b/src/app/about/about-home/about-home.component.html
@@ -10,19 +10,18 @@
           </h1>
           <div class="title-underline mb-4 mt-3"></div>
           <p class="text-secondary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
-            quod quibusdam eveniet esse, praesentium voluptatibus. Impedit
-            minima nam eos ipsum! Ipsa porro amet debitis quibusdam animi
-            voluptate hic soluta vitae! Lorem ipsum, dolor sit amet consectetur
-            adipisicing elit. Dolorem omnis eligendi quidem, explicabo dolor
-            odio, quis animi corrupti veniam adipisci, consequatur sed ducimus
-            aperiam mollitia quas? Aut error impedit, suscipit deserunt
-            reprehenderit, cupiditate accusamus autem inventore esse est
-            quisquam quis distinctio officiis ratione asperiores voluptas
-            expedita dolorum dicta dolorem ex. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Cum tempora illo, vel laboriosam
-            necessitatibus dicta obcaecati dolore repudiandae ad sapiente harum!
-            Aliquam perferendis, eum molestiae maiores ab modi expedita in.
+            The vision of ADUST is multi-faceted and multifarious. ADUST looks
+            beyond stereotypical periphery. It seeks to keep pace with the
+            fleeting time and technological advancement. Creation of new jobs
+            and invention of new methods of learning are its principal dream. It
+            strives to impart future-proof education to its pupils. ADUST
+            believes that without sound knowledge in any discipline, all-out
+            progress will not be achievable. It wishes to employ its total means
+            and energy to root out the curse of unemployment and prevent social
+            regression. ADUST visualizes attaining of social and economic
+            emancipation, removing gender disparity and producing befitting
+            employments for its students. ADUST dreams of better and sustainable
+            future for the whole nation.
           </p>
         </div>
         <!-- picture for about -->
