--- a/src/app/about/about-more/about-more.component.html
+++ b/src/app/about/about-more/about-more.component.html
@@ -8,19 +8,17 @@
         </div>
         <div class="col-md-6 col-lg-8 pt-3">
           <p class="text-secondary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
-            quod quibusdam eveniet esse, praesentium voluptatibus. Impedit
-            minima nam eos ipsum! Ipsa porro amet debitis quibusdam animi
-            voluptate hic soluta vitae! Lorem ipsum, dolor sit amet consectetur
-            adipisicing elit. Dolorem omnis eligendi quidem, explicabo dolor
-            odio, quis animi corrupti veniam adipisci, consequatur sed ducimus
-            aperiam mollitia quas? Aut error impedit, suscipit deserunt
-            reprehenderit, cupiditate accusamus autem inventore esse est
-            quisquam quis distinctio officiis ratione asperiores voluptas
-            expedita dolorum dicta dolorem ex. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Cum tempora illo, vel laboriosam
-            necessitatibus dicta obcaecati dolore repudiandae ad sapiente harum!
-            Aliquam perferendis, eum molestiae maiores ab modi expedita in.
+            ADUST greatest resource in fulfilling its mission is its faculty of
+            about 300 distinguished scholars and educators, whose scholarly
+            research experiences and teaching skills enrich the students’
+            classroom environment. To ensure quality education, ADUST is
+            equipped with modern infrastructural facilities, latest academic
+            curricula, Internet with Wi-Fi facility, air-conditioned classrooms,
+            and seminar halls supported with multi-media, rich libraries, most
+            sophisticated laboratories, students’ cafeterias, standby
+            generators, etc. The students of ADUST experience a vibrant
+            university community with a diverse range of academic offerings and
+            about 6,500 participating students.
           </p>
           <a href="#" mat-stroked-button class="btn--hidden">learn more</a>
         </div>
