--- a/src/app/navbar/navbar-home/navbar-home.component.html
+++ b/src/app/navbar/navbar-home/navbar-home.component.html
@@ -3,7 +3,9 @@
   (scroll)="onscroll()"
   [ngClass]="navbarfixed ? 'fixed' : 'nofixed'"
 >
-  <span class="text"><a href="#" target="_blank">info@adust.edu.bd</a> </span>
+  <span class="text"
+    ><a href="mailto:naymur96@gmail.com" target="_blank">info@adust.edu.bd</a>
+  </span>
   <span class="button">
     <a href="#" mat-raised-button>Sign in/Register</a>
   </span>
