--- a/src/app/events/event/event.component.css
+++ b/src/app/events/event/event.component.css
@@ -94,6 +94,10 @@
   /* margin: 0 auto; */
   margin-top: 2rem;
 }
+.content:hover {
+  transform: scaleY(1.2);
+  transition: all 0.2ms;
+}
 @media screen and (max-width: 400px) {
   .event-container .event {
     flex-direction: column;
